[tool.poetry]
name = "heapdict"
version = "0.1.0"
description = "implementation of priority queue with a dict interface"
authors = ["Evgeniy Selezniov <nanouasyn@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.49.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
