[tool.poetry]
name = "heapdict"
version = "0.2.0"
description = "implementation of priority queue with a dict interface"
authors = ["Evgeniy Selezniov <nanouasyn@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
hypothesis = "^6.49.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = true
